# tiberius

./: .gitignore  CLAUDE.md  README-LLM.md  README.md  eslint.config.mjs  jest.setup.js  nx.json  package-lock.json  package.json  pom.xml  tsconfig.base.json  tsconfig.json
apps/falcon-iq-analyzer/: .dockerignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml  project.json  pyproject.toml  requirements.txt
apps/falcon-iq-analyzer/results/benchmarks/: benchmark-597c13b00b94.md  benchmark-98d2fb5dbc71.md  benchmark-be21a3011570.md  benchmark-result-597c13b00b94.json  benchmark-result-98d2fb5dbc71.json  benchmark-result-be21a3011570.json
apps/falcon-iq-analyzer/src/falcon_iq_analyzer/: config.py  main.py
apps/falcon-iq-analyzer/src/falcon_iq_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/falcon-iq-analyzer/src/falcon_iq_analyzer/cache/: store.py
apps/falcon-iq-analyzer/src/falcon_iq_analyzer/llm/: base.py  factory.py  industry_benchmark_prompts.py  multi_benchmark_prompts.py  ollama_client.py  openai_client.py  prompts.py
apps/falcon-iq-analyzer/src/falcon_iq_analyzer/models/: company_benchmark.py  crawl_models.py  domain.py  enrichment.py  industry_benchmark.py  requests.py  responses.py
apps/falcon-iq-analyzer/src/falcon_iq_analyzer/pipeline/: analyzer.py  benchmark.py  company_benchmark.py  industry_benchmark.py  job_manager.py
apps/falcon-iq-analyzer/src/falcon_iq_analyzer/routers/: analyze.py  benchmark.py  compare.py  (+4 more)
apps/falcon-iq-analyzer/tests/: conftest.py  test_company_benchmark.py  test_crawler_client.py  test_enrichment_extras.py  test_enrichment_integration.py  test_health.py  test_storage.py
libs/notifications/python/: pyproject.toml
(+541 files in other folders)
