[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falconiq-notifications"
version = "0.1.0"
description = "Falcon IQ notification library - email templates and SES integration"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "jinja2>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
